<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Environment Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!-- Home Activity -->
    <string name="title_activity_home_page">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="launch">Start</string>

    <!-- OptionMenu Menu -->
    <string name="title_activity_option_menu">OptionMenu</string>
    <string name="menu_stop">Exit</string>
    <string name="menu_home">Home</string>

    <!-- How Are You? Activiteit -->
    <string name="title_activity_mood_page">How Are You?</string>
    <string name="question_mood">How Are You Feeling?</string>
    <string name="happy">Happy</string>
    <string name="unhappy">Unhappy</string>
    <string name="next_button">Next</string>

    <!-- Camera Activiteit -->
    <string name="title_activity_camera">Camera</string>
    <string name="picture_instruction">Take a Picture</string>
    <string name="go_button">Go!</string>

    <!-- Audio Activity -->
    <string name="title_activity_audio">Audio Recorder</string>
    <string name="sound_instruction">Record for 10 sec</string>
    <string name="record_button">Start Recording</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings_page">Settings</string>

    <!-- SettingsFragment Activity -->
    <string name="title_settings_fragment">Preferences</string>

    <!-- Settings XML -->
    <string name="pref_cat_a">General settings</string>
    <string name="pref_cat_b">Time settings</string>
    <string name="pref_cat_c">Ringtone settings</string>
    <string name="pref_notification">Enable Notifications</string>
    <string name="pref_start_not_time">Start Time</string>
    <string name="pref_stop_not_time">Stop Time</string>
    <string name="pref_not_interval">Notification Interval</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="on">Enalbed</string>
    <string name="off">Disabled</string>
    <string name="pref_start_not_time_summ">Moment before which you do not want to receive notifications</string>
    <string name="pref_stop_not_time_summ">Moment after which you do not want to receive notifications</string>
    <string name="pref_not_interval_summ">Number of minutes between every notification</string>
    <string name="title_activity_result_page">ResultPage</string>
    <string name="title_activity_image_tab">ImageTab</string>
    <string name="title_activity_sound_tab">SoundTab</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_image_data_tab">ImageDataTab</string>

</resources>